# team-generator

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: dockerfile-lint.yaml  markdown-lint.yaml  python-lint.yml  test-backend.yaml
backend/: .env-sample  Dockerfile  Makefile  database.py  generate_pdf.py  main.py  models.py  pyproject.toml  schemas.py
backend/tests/: test_api.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: CreateGameModal.vue  GameTable.vue  JoinGameModal.vue  Navbar.vue
frontend/src/router/: index.js
frontend/src/views/: GamesView.vue  IndexView.vue  MainView.vue
nginx/: nginx.conf
team_generator/: Dockerfile  database.py  main.py  models.py  pyproject.toml  run.sh  test.py  test_main.py
team_generator/templates/: index.html
