[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Renan Santana <renan.santana@instruct.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
